# hypersky

./: .gitignore  .tool-versions  README.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tailwind.config.js
.github/workflows/: django.yml
apps/accounts/: forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_rename_token_account_access_token_and_more.py
apps/accounts/templates/: login.dj  register.dj
apps/libs/: __init__.py  authentication.py  logger.py  services.py  tests.py
apps/packs/: apps.py
apps/pages/: tests.py  urls.py  views.py
apps/pages/templates/: app.dj  home.dj
hypersky/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: base.dj
templates/partials/: nav.dj
