[tool.poetry]
name = "hypersky"
version = "0.1.0"
description = ""
authors = ["Owais Jamil <desertthunder.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-htmx = "^1.21.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
coverage = "^7.6.8"
httpx = "^0.27.2"
pydantic = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "hypersky.settings"
